# hamdb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml  md_to_pdf.yml
docs/: blankpythonproject.doctree  blankpythonproject.html  blankpythonproject.samplers.doctree  blankpythonproject.samplers.html  blankpythonproject.utils.doctree  conf.py  environment.pickle  genindex.html  hamdb.doctree  hamdb.html  hamdb.rst  index.doctree  index.html  modules.doctree  modules.html  modules.rst  objects.inv  py-modindex.html  search.html  searchindex.js  setup.doctree  setup.html  start_project.doctree  start_project.html  test.doctree  test.html
docs/_sources/: modules.rst.txt  test.rst.txt
examples/: README.md  exact_env.txt  example_slurm_output.txt  example_slurm_output_error.txt  funcs.py  hamdb_example.ipynb  main.py  submit.slurm
examples/structures/: cadmium.cjson  cadmium.xyz  chitosan_monomer.cjson  chitosan_monomer.xyz  chitosan_monomer_with_cadmium.cjson  chitosan_monomer_with_cadmium.xyz  combined_starting_materials.cjson  combined_starting_materials.xyz  ts_guess.cjson  ts_guess.xyz
examples/xyzs/: cadmium.xyz  monomer.xyz  n_product.xyz  n_product_ts.xyz  s_product.xyz  s_product_ts.xyz  vdw_sm_planar.xyz
hamdb/: __init__.py
paper/: paper.bib  paper.md
test/: test_hamdb.py
