[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hamdb"
version = "0.0.0"
authors = [
    { name = "Jackson Burns" },
]
license = { text = "MIT" }
description = "Heavy Metals and Monomers Database"
classifiers = [
    "Programming Language :: Python :: 3",
]
urls = { Homepage = "https://github.com/JacksonBurns/hamdb" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]
demos = ["jupyter"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.isort]
profile = "black"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hamdb*"]
exclude = ["docs*", "examples*", "test*"]
